@@ -1,1 +1,2 @@
+Requires: pupmod-simp-simpcat >= 6.0.0
 Obsoletes: pupmod-svckill-test >= 0.0.1
