@@ -1,6 +1,6 @@
 {
   "name":    "simp-svckill",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "author":  "simp",
   "summary": "Disables all services that are not controlled by Puppet.",
   "license": "Apache-2.0",
@@ -11,7 +11,7 @@
   "dependencies": [
     {
       "name": "simp/simpcat",
-      "version_requirement": ">= 4.1.0"
+      "version_requirement": ">= 6.0.0"
     },
     {
       "name": "simp/simplib",
